hphp/test/zend/good/ext/zlib/tests/bug61443.php
<?php
ob_start(); echo "foo\n"; ob_get_clean(); 
if(!headers_sent()) ini_set('zlib.output_compression', true); echo "end\n";
?>
DONE